--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTModifyTradePasswordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTModifyTradePasswordVC.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7xB-6g-JPR">
-                    <rect key="frame" x="12" y="64" width="390" height="94.5"/>
+                    <rect key="frame" x="12" y="64" width="390" height="93"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入旧提币密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xom-uE-X1v">
                             <rect key="frame" x="10" y="21" width="114.5" height="17"/>
@@ -31,9 +31,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入旧提币密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OHw-it-BmP">
-                            <rect key="frame" x="10" y="56" width="370" height="17.5"/>
+                            <rect key="frame" x="10" y="56" width="370" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="yhP-b5-1XK"/>
                             </connections>
@@ -55,7 +55,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8i-ig-gdo">
-                    <rect key="frame" x="12" y="168.5" width="390" height="173"/>
+                    <rect key="frame" x="12" y="167" width="390" height="170"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入新密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0e-pi-dar">
                             <rect key="frame" x="11" y="21" width="86" height="17"/>
@@ -64,15 +64,15 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码（6-20个字符）" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7eb-Jy-JNe">
-                            <rect key="frame" x="11" y="48" width="318" height="17.5"/>
+                            <rect key="frame" x="11" y="48" width="318" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="agD-WT-ZUi"/>
                             </connections>
                         </textField>
                         <button opaque="NO" tag="103" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oXp-8d-WD4">
-                            <rect key="frame" x="360" y="50" width="19" height="14"/>
+                            <rect key="frame" x="360" y="49" width="19" height="14"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="14" id="KIq-7x-hd9"/>
                                 <constraint firstAttribute="width" constant="19" id="bNe-bN-8Ht"/>
@@ -84,7 +84,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MnD-Uh-ux0">
-                            <rect key="frame" x="344" y="50" width="1" height="13.5"/>
+                            <rect key="frame" x="344" y="49.5" width="1" height="13.5"/>
                             <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="1" id="7aK-HG-lEj"/>
@@ -92,22 +92,22 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kW0-qX-bfr">
-                            <rect key="frame" x="11" y="75.5" width="368" height="1"/>
+                            <rect key="frame" x="11" y="74" width="368" height="1"/>
                             <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="cm6-Wu-pYQ"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ik-JQ-Wqr">
-                            <rect key="frame" x="11" y="124.5" width="318" height="17.5"/>
+                            <rect key="frame" x="11" y="123" width="318" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="IKu-KM-j9o"/>
                             </connections>
                         </textField>
                         <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSL-oC-P5p">
-                            <rect key="frame" x="360" y="126.5" width="19" height="14"/>
+                            <rect key="frame" x="360" y="124" width="19" height="14"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="19" id="1gD-cL-8lL"/>
                                 <constraint firstAttribute="height" constant="14" id="LtC-VW-4OB"/>
@@ -119,13 +119,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请再次输入新密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozN-CN-9pT">
-                            <rect key="frame" x="11" y="97.5" width="114.5" height="17"/>
+                            <rect key="frame" x="11" y="96" width="114.5" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.20392156859999999" green="0.20392156859999999" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vvo-5Q-RDh">
-                            <rect key="frame" x="344" y="126.5" width="1" height="13.5"/>
+                            <rect key="frame" x="344" y="124.5" width="1" height="13.5"/>
                             <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="13.5" id="GGQ-h9-JcX"/>
@@ -165,7 +165,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5k-Ua-GZz">
-                    <rect key="frame" x="24" y="351.5" width="366" height="29"/>
+                    <rect key="frame" x="24" y="347" width="366" height="29"/>
                     <attributedString key="attributedText">
                         <fragment>
                             <string key="content">温馨提示：请牢记您的提币密码，如果遗忘将无法找回，
@@ -185,7 +185,7 @@
                     </attributedString>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oGy-Ei-Prx">
-                    <rect key="frame" x="39" y="430.5" width="336" height="44"/>
+                    <rect key="frame" x="39" y="426" width="336" height="44"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="YQ5-Ds-arG"/>
