--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTImportWalletVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTImportWalletVC.xib
@@ -125,7 +125,7 @@
                                         <outlet property="delegate" destination="-1" id="9zm-3x-fUZ"/>
                                     </connections>
                                 </textView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入助记词单词，并使用空格分隔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9zO-mC-O82">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入助记词单词，并使用逗号分隔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9zO-mC-O82">
                                     <rect key="frame" x="10" y="22" width="212.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -149,7 +149,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZkH-sk-1dj">
-                            <rect key="frame" x="12" y="180" width="390" height="173"/>
+                            <rect key="frame" x="12" y="180" width="390" height="170"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设置密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3GB-Jy-oJ8">
                                     <rect key="frame" x="11" y="21" width="57.5" height="17"/>
@@ -158,15 +158,15 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码（6-20个字符）" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Czh-MS-iNF">
-                                    <rect key="frame" x="11" y="48" width="318" height="17.5"/>
+                                    <rect key="frame" x="11" y="48" width="318" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="QDa-gq-Dz2"/>
                                     </connections>
                                 </textField>
                                 <button opaque="NO" tag="103" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18Q-g8-fKi">
-                                    <rect key="frame" x="360" y="50" width="19" height="14"/>
+                                    <rect key="frame" x="360" y="49" width="19" height="14"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="19" id="3VF-re-Ucb"/>
                                         <constraint firstAttribute="height" constant="14" id="h0t-6t-eu5"/>
@@ -178,7 +178,7 @@
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XSN-Uo-Ze0">
-                                    <rect key="frame" x="344" y="50" width="1" height="13.5"/>
+                                    <rect key="frame" x="344" y="49.5" width="1" height="13.5"/>
                                     <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="1" id="f9c-wI-8cs"/>
@@ -186,22 +186,22 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFD-N5-m71">
-                                    <rect key="frame" x="11" y="75.5" width="368" height="1"/>
+                                    <rect key="frame" x="11" y="74" width="368" height="1"/>
                                     <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="OOK-bi-5KT"/>
                                     </constraints>
                                 </view>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c5K-tE-oY2">
-                                    <rect key="frame" x="11" y="124.5" width="318" height="17.5"/>
+                                    <rect key="frame" x="11" y="123" width="318" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="olX-8z-tV5"/>
                                     </connections>
                                 </textField>
                                 <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q3d-hi-AGg">
-                                    <rect key="frame" x="360" y="126.5" width="19" height="14"/>
+                                    <rect key="frame" x="360" y="124" width="19" height="14"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="19" id="MSh-hJ-3Ph"/>
                                         <constraint firstAttribute="height" constant="14" id="mQg-Mi-Cl3"/>
@@ -213,13 +213,13 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请再次输入密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83r-sR-jmh">
-                                    <rect key="frame" x="11" y="97.5" width="100" height="17"/>
+                                    <rect key="frame" x="11" y="96" width="100" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" red="0.20392156859999999" green="0.20392156859999999" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ieG-h4-zVg">
-                                    <rect key="frame" x="344" y="126.5" width="1" height="13.5"/>
+                                    <rect key="frame" x="344" y="124.5" width="1" height="13.5"/>
                                     <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="1" id="GgY-OW-sAT"/>
@@ -259,7 +259,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="63h-HP-Ye6">
-                            <rect key="frame" x="24" y="363" width="319" height="27"/>
+                            <rect key="frame" x="24" y="360" width="319" height="27"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <state key="normal" title="点击导入钱包表示我已仔细阅读并同意《服务于隐私政策》">
                                 <color key="titleColor" red="0.65490196078431373" green="0.52549019607843139" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
@@ -269,7 +269,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDS-vO-yqD">
-                            <rect key="frame" x="39" y="440" width="336" height="44"/>
+                            <rect key="frame" x="39" y="437" width="336" height="44"/>
                             <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="1h3-cl-tvY"/>
