--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTProfileViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTProfileViewController.xib
@@ -9,7 +9,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTProfileViewController">
             <connections>
+                <outlet property="activeBtn" destination="yXj-49-0Zw" id="Z2o-VW-lKJ"/>
+                <outlet property="address" destination="1ct-3a-wa6" id="MAB-1N-Ni5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="walletName" destination="5oE-lZ-dql" id="B8u-EA-37V"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -40,8 +43,8 @@
                                         <action selector="userHeadClickAction:" destination="-1" eventType="touchUpInside" id="89m-mO-6Oa"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jaylovely" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oE-lZ-dql">
-                                    <rect key="frame" x="104.5" y="40.5" width="57.5" height="14"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oE-lZ-dql">
+                                    <rect key="frame" x="104.5" y="40.5" width="0.0" height="14"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="14" id="1Vv-X6-Eh9"/>
                                     </constraints>
@@ -50,7 +53,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yXj-49-0Zw">
-                                    <rect key="frame" x="167" y="36.5" width="63" height="22"/>
+                                    <rect key="frame" x="109.5" y="36.5" width="63" height="22"/>
                                     <color key="backgroundColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="63" id="mby-tc-Mwp"/>
@@ -66,8 +69,8 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sjhdgh90sdjalskcfnkdsmncnsjd" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ct-3a-wa6">
-                                    <rect key="frame" x="104.5" y="66.5" width="178.5" height="12"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ct-3a-wa6">
+                                    <rect key="frame" x="104.5" y="66.5" width="0.0" height="12"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="12" id="PBh-xw-M0R"/>
                                     </constraints>
@@ -76,12 +79,15 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0U-H0-QcP">
-                                    <rect key="frame" x="283" y="57.5" width="30" height="30"/>
+                                    <rect key="frame" x="104.5" y="57.5" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="1bh-lt-Rth"/>
                                         <constraint firstAttribute="height" constant="30" id="anQ-Lb-iFd"/>
                                     </constraints>
                                     <state key="normal" image="icon_profileCopy"/>
+                                    <connections>
+                                        <action selector="copyAction:" destination="-1" eventType="touchUpInside" id="jYa-7Y-PuC"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
